--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,8 @@ jobs:
             archive: zip
     steps:
       - uses: actions/checkout@master
-      - uses: dtolnay/rust-toolchain@stable
+      - name: Update toolchain
+        uses: dtolnay/rust-toolchain@stable
         with:
           target: ${{ matrix.target }}
       - name: Compile and release
@@ -30,3 +31,9 @@ jobs:
         with:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
+      - uses: ncipollo/release-action@v1.12.0
+        with:
+          artifacts: "mdbook-typst-highlight-${{ matrix.target }}.*"
+          allowUpdates: true
+          omitNameDuringUpdate: true
+          omitBodyDuringUpdate: true
