--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ pulldown-cmark-to-cmark = "11.0.0"
 semver = "1.0.19"
 serde_json = "1.0.107"
 sha2 = "0.10.8"
-syntect = { version = "5.1.0", default-features = false, features = ["yaml-load", "default-themes", "regex-onig", "html"] }
+syntect = { version = "5.1.0", default-features = false, features = ["yaml-load", "default-themes", "regex-onig", "html", "default-syntaxes"] }
 tokio = { version = "1.33.0", features = ["rt"] }
+toml = "0.5.2"
