--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ sha2 = "0.10.8"
 syntect = { version = "5.1.0", default-features = false, features = ["yaml-load", "default-themes", "regex-onig", "html", "default-syntaxes"] }
 tokio = { version = "1.33.0", features = ["rt"] }
 toml = "0.5.2"
+itertools = "*"
